--- a/NewGeneUI/NewGene/Widgets/CreateOutput/LimitDMUs/limit_dmus_region.ui
+++ b/NewGeneUI/NewGene/Widgets/CreateOutput/LimitDMUs/limit_dmus_region.ui
@@ -110,6 +110,9 @@
            <layout class="QHBoxLayout" name="horizontalLayout_limit_dmus">
             <item>
              <layout class="QVBoxLayout" name="verticalLayout_bottomleft">
+              <property name="spacing">
+               <number>2</number>
+              </property>
               <item>
                <widget class="QLabel" name="label_bottomleft">
                 <property name="text">
@@ -119,6 +122,40 @@
                  <enum>Qt::RichText</enum>
                 </property>
                </widget>
+              </item>
+              <item>
+               <layout class="QHBoxLayout" name="horizontalLayoutSelectDeselectAll">
+                <property name="spacing">
+                 <number>2</number>
+                </property>
+                <item>
+                 <widget class="QToolButton" name="toolButtonSelectAllBottomLeft">
+                  <property name="text">
+                   <string>Select All</string>
+                  </property>
+                 </widget>
+                </item>
+                <item>
+                 <widget class="QToolButton" name="toolButtonDeselectAllBottomLeft">
+                  <property name="text">
+                   <string>Deselect All</string>
+                  </property>
+                 </widget>
+                </item>
+                <item>
+                 <spacer name="horizontalSpacerSelectDeselectAllLeft">
+                  <property name="orientation">
+                   <enum>Qt::Horizontal</enum>
+                  </property>
+                  <property name="sizeHint" stdset="0">
+                   <size>
+                    <width>40</width>
+                    <height>20</height>
+                   </size>
+                  </property>
+                 </spacer>
+                </item>
+               </layout>
               </item>
               <item>
                <widget class="QListView" name="listView_limit_dmus_bottom_left_pane">
@@ -175,6 +212,9 @@
             </item>
             <item>
              <layout class="QVBoxLayout" name="verticalLayout_bottomright">
+              <property name="spacing">
+               <number>2</number>
+              </property>
               <item>
                <widget class="QLabel" name="label_bottomright">
                 <property name="text">
@@ -184,6 +224,40 @@
                  <enum>Qt::RichText</enum>
                 </property>
                </widget>
+              </item>
+              <item>
+               <layout class="QHBoxLayout" name="horizontalLayout">
+                <property name="spacing">
+                 <number>2</number>
+                </property>
+                <item>
+                 <widget class="QToolButton" name="toolButtonSelectAllBottomRight">
+                  <property name="text">
+                   <string>Select All</string>
+                  </property>
+                 </widget>
+                </item>
+                <item>
+                 <widget class="QToolButton" name="toolButtonDeselectAllBottomRight">
+                  <property name="text">
+                   <string>Deselect All</string>
+                  </property>
+                 </widget>
+                </item>
+                <item>
+                 <spacer name="horizontalSpacer">
+                  <property name="orientation">
+                   <enum>Qt::Horizontal</enum>
+                  </property>
+                  <property name="sizeHint" stdset="0">
+                   <size>
+                    <width>40</width>
+                    <height>20</height>
+                   </size>
+                  </property>
+                 </spacer>
+                </item>
+               </layout>
               </item>
               <item>
                <widget class="QListView" name="listView_limit_dmus_bottom_right_pane">
