--- a/NewGeneUI/NewGene/Widgets/CreateOutput/SelectVariables/timerangebox.ui
+++ b/NewGeneUI/NewGene/Widgets/CreateOutput/SelectVariables/timerangebox.ui
@@ -153,7 +153,8 @@
                   </size>
                  </property>
                  <property name="text">
-                  <string>  Ending date &amp; time:</string>
+                  <string>  Ending date &amp; time:
+(no restriction)</string>
                  </property>
                  <property name="alignment">
                   <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
