--- a/NewGeneUI/NewGene/Widgets/CreateOutput/SelectVariables/timerangebox.ui
+++ b/NewGeneUI/NewGene/Widgets/CreateOutput/SelectVariables/timerangebox.ui
@@ -69,7 +69,7 @@
                   </size>
                  </property>
                  <property name="text">
-                  <string>Starting date &amp; time:
+                  <string>Starting date:
 (Min date: 9/14/1752)</string>
                  </property>
                  <property name="alignment">
@@ -153,7 +153,7 @@
                   </size>
                  </property>
                  <property name="text">
-                  <string>  Ending date &amp; time:
+                  <string>  Ending date:
 (no restriction)</string>
                  </property>
                  <property name="alignment">
