Dummy splash screen now functions.  The splash screen itself must now be designed.

--- a/NewGeneUI/Resources/NewGeneResources.qrc
+++ b/NewGeneUI/Resources/NewGeneResources.qrc
@@ -2,4 +2,7 @@
     <qresource prefix="/resources">
         <file>kitty.jpg</file>
     </qresource>
+    <qresource prefix="/">
+        <file>earth.bits.png</file>
+    </qresource>
 </RCC>
