Stub splash screen (currently just a white rectangle), implemented as a QQuickWidget with a QML file, currently works functionally.

--- a/NewGeneUI/Resources/NewGeneResources.qrc
+++ b/NewGeneUI/Resources/NewGeneResources.qrc
@@ -4,5 +4,6 @@
     </qresource>
     <qresource prefix="/">
         <file>earth.bits.png</file>
+        <file>splash.qml</file>
     </qresource>
 </RCC>
