--- a/NewGeneUI/Resources/NewGeneResources.qrc
+++ b/NewGeneUI/Resources/NewGeneResources.qrc
@@ -5,5 +5,6 @@
     <qresource prefix="/">
         <file>earth.bits.png</file>
         <file>splash.qml</file>
+        <file>earth.tunnel.jpg</file>
     </qresource>
 </RCC>
