--- a/NewGeneUI/NewGene/Widgets/newgenemainwindow.ui
+++ b/NewGeneUI/NewGene/Widgets/newgenemainwindow.ui
@@ -45,52 +45,10 @@
        </sizepolicy>
       </property>
       <property name="styleSheet">
-       <string notr="true">QTabWidget::tab-bar {
-border: 0px;
-}
-
-QTabBar::tab:selected {
-border-left: 1px solid #1c1515;
-padding-left: 10px;
-border-right: 1px solid #1c1515;
-padding-right: 10px;
-border-bottom: 1px solid #7e7fff;
-border-top: 0px solid #a0a0a0;
-margin-bottom: 0px;
-border-bottom-left-radius: 8px;
-border-bottom-right-radius: 8px;
-padding-top: 6px;
-padding-bottom: 6px;
-background: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
-                                 stop: 0 #ff450c,
-                                 stop: 0.05 #f98a74,
-                                 stop: 0.2 #fde0d3,
-                                 stop: 0.9 #f9dac7,
-                                 stop: 1 #f98a74);
- }
-
-QTabBar::tab:!selected {
-border-left: 1px solid #1c1515;
-padding-left: 10px;
-border-right: 1px solid #1c1515;
-padding-right: 10px;
-border-bottom: 1px solid #7e7fff;
-border-top: 0px solid #a0a0a0;
-margin-bottom: 4px;
-border-bottom-left-radius: 8px;
-border-bottom-right-radius: 8px;
-padding-top: 1px;
-padding-bottom: 1px;
-background: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
-                                 stop: 0 /* #5354dd, */ #b1b1ff,
-                                 stop: 0.3 /* #b1b1ff, */ #c7c7c7
-                                 stop: 0.6 #c7c7c7,
-                                 stop: 1.0 #a1a1a1);
-}
-</string>
+       <string notr="true"/>
       </property>
       <property name="tabPosition">
-       <enum>QTabWidget::South</enum>
+       <enum>QTabWidget::North</enum>
       </property>
       <property name="tabShape">
        <enum>QTabWidget::Triangular</enum>
