Make the background of the top bars white.

--- a/NewGeneUI/NewGene/Widgets/CreateOutput/newgenecreateoutput.ui
+++ b/NewGeneUI/NewGene/Widgets/CreateOutput/newgenecreateoutput.ui
@@ -37,7 +37,7 @@
      <property name="styleSheet">
       <string notr="true">QLabel
 {
-	background-color : #e4eeef;
+	background-color : #ffffff;
 	color: #727272;
 	font-size: 20px;
 }</string>
