Rename "TimeRangeBox" to "OptionsBox", since this widget now contains all general options.
Also, rename some functions whose names were holdovers to prior to the rewrite of the core engine.

--- a/NewGeneUI/NewGene/Widgets/CreateOutput/GenerateOutput/newgenegenerateoutput.ui
+++ b/NewGeneUI/NewGene/Widgets/CreateOutput/GenerateOutput/newgenegenerateoutput.ui
@@ -37,7 +37,7 @@
     </spacer>
    </item>
    <item>
-    <widget class="TimeRangeBox" name="optionsBox">
+    <widget class="OptionsBox" name="optionsBox">
      <property name="frameShape">
       <enum>QFrame::StyledPanel</enum>
      </property>
@@ -222,9 +222,9 @@
  </widget>
  <customwidgets>
   <customwidget>
-   <class>TimeRangeBox</class>
+   <class>OptionsBox</class>
    <extends>QFrame</extends>
-   <header>timerangebox.h</header>
+   <header>optionsbox.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
