--- a/NewGeneUI/NewGene/Widgets/CreateOutput/newgenecreateoutput.ui
+++ b/NewGeneUI/NewGene/Widgets/CreateOutput/newgenecreateoutput.ui
@@ -43,7 +43,7 @@
 }</string>
      </property>
      <property name="text">
-      <string>Create Output Dataset</string>
+      <string>Output Dataset</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignCenter</set>
