--- a/NewGeneUI/NewGene/Widgets/ManageInput/newgenemanageinput.ui
+++ b/NewGeneUI/NewGene/Widgets/ManageInput/newgenemanageinput.ui
@@ -43,7 +43,7 @@
 }</string>
      </property>
      <property name="text">
-      <string>Manage Input Dataset</string>
+      <string>Input Dataset</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignCenter</set>
