--- a/NewGeneUI/NewGene/Widgets/newgenemainwindow.ui
+++ b/NewGeneUI/NewGene/Widgets/newgenemainwindow.ui
@@ -45,13 +45,47 @@
        </sizepolicy>
       </property>
       <property name="styleSheet">
-       <string notr="true"/>
+       <string notr="true">#tabWidgetMain pane { /* The tab widget frame */
+     border-top: 2px solid #C2C7CB;
+     position: absolute;
+     top: -0.5em;
+ }
+
+ /* Style the tab using the tab sub-control. Note that
+     it reads QTabBar _not_ QTabWidget */
+ #tabWidgetMain QTabBar::tab {
+     background: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
+                                 stop: 0 #E1E1E1, stop: 0.4 #DDDDDD,
+                                 stop: 0.5 #D8D8D8, stop: 1.0 #D3D3D3);
+     border: 2px solid #C4C4C3;
+     border-bottom-color: #C2C7CB; /* same as the pane color */
+     border-top-left-radius: 4px;
+     border-top-right-radius: 4px;
+     min-width: 8ex;
+     padding: 2px;
+ }
+
+ #tabWidgetMain QTabBar::tab:selected, QTabBar::tab:hover {
+     background: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
+                                 stop: 0 #fafafa, stop: 0.4 #f4f4f4,
+                                 stop: 0.5 #e7e7e7, stop: 1.0 #fafafa);
+ }
+
+ #tabWidgetMain QTabBar::tab:selected {
+     border-color: #9B9B9B;
+     border-bottom-color: #C2C7CB; /* same as pane color */
+ }
+ 
+  #tabWidgetMain &gt; QTabBar {
+     margin: 20px;
+ }
+</string>
       </property>
       <property name="tabPosition">
        <enum>QTabWidget::North</enum>
       </property>
       <property name="tabShape">
-       <enum>QTabWidget::Triangular</enum>
+       <enum>QTabWidget::Rounded</enum>
       </property>
       <property name="currentIndex">
        <number>0</number>
@@ -68,6 +102,9 @@
        </property>
        <attribute name="title">
         <string> Create output dataset </string>
+       </attribute>
+       <attribute name="toolTip">
+        <string>Define the output columns and rows.</string>
        </attribute>
        <layout class="QVBoxLayout" name="verticalLayoutOutput">
         <property name="leftMargin">
@@ -93,6 +130,9 @@
        </property>
        <attribute name="title">
         <string> Manage input</string>
+       </attribute>
+       <attribute name="toolTip">
+        <string>Import data, and manage data that has already been imported.</string>
        </attribute>
        <layout class="QVBoxLayout" name="verticalLayoutOutput">
         <property name="leftMargin">
