--- a/NewGeneUI/NewGene/Widgets/newgenemainwindow.ui
+++ b/NewGeneUI/NewGene/Widgets/newgenemainwindow.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>NewGene - K-adic data management for the social sciences</string>
+   <string>NewGene</string>
   </property>
   <property name="layoutDirection">
    <enum>Qt::LeftToRight</enum>
