--- a/NewGeneUI/NewGene/Widgets/newgenemainwindow.ui
+++ b/NewGeneUI/NewGene/Widgets/newgenemainwindow.ui
@@ -88,7 +88,7 @@
        <enum>QTabWidget::Rounded</enum>
       </property>
       <property name="currentIndex">
-       <number>0</number>
+       <number>1</number>
       </property>
       <property name="elideMode">
        <enum>Qt::ElideNone</enum>
@@ -101,7 +101,7 @@
         <string notr="true"/>
        </property>
        <attribute name="title">
-        <string> Create output dataset </string>
+        <string> Output dataset </string>
        </attribute>
        <attribute name="toolTip">
         <string>Define the output columns and rows.</string>
@@ -129,7 +129,7 @@
         <string notr="true"/>
        </property>
        <attribute name="title">
-        <string> Manage input</string>
+        <string> Input dataset </string>
        </attribute>
        <attribute name="toolTip">
         <string>Import data, and manage data that has already been imported.</string>
