Add stretchers to the K-ad spin control region. Clean up some dynamic_cast's to check for nullptr.

--- a/NewGeneUI/NewGene/Widgets/CreateOutput/SelectVariables/VariableSummary/newgenevariablesummary.ui
+++ b/NewGeneUI/NewGene/Widgets/CreateOutput/SelectVariables/VariableSummary/newgenevariablesummary.ui
@@ -37,7 +37,7 @@
      <property name="styleSheet">
       <string notr="true">QLabel
 {
-	background-color : #EEF3EE;
+	background-color : #F6F3EE;
 	font-weight: bold;
 	font-size: 16px;
 }</string>
