--- a/NewGeneUI/NewGene/Widgets/CreateOutput/SelectVariables/kadcolumnselectionbox.ui
+++ b/NewGeneUI/NewGene/Widgets/CreateOutput/SelectVariables/kadcolumnselectionbox.ui
@@ -7,8 +7,20 @@
     <x>0</x>
     <y>0</y>
     <width>427</width>
-    <height>71</height>
+    <height>35</height>
    </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>0</width>
+    <height>35</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Frame</string>
@@ -34,6 +46,12 @@
    </property>
    <item>
     <widget class="QScrollArea" name="scrollArea">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Expanding" vsizetype="Ignored">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
      <property name="frameShape">
       <enum>QFrame::NoFrame</enum>
      </property>
@@ -55,8 +73,14 @@
         <x>0</x>
         <y>0</y>
         <width>425</width>
-        <height>69</height>
+        <height>33</height>
        </rect>
+      </property>
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Preferred" vsizetype="Ignored">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
       </property>
       <property name="styleSheet">
        <string notr="true">#scrollAreaWidgetContents {background-color: #F8FAF5;}</string>
@@ -65,21 +89,21 @@
        <property name="geometry">
         <rect>
          <x>0</x>
-         <y>30</y>
+         <y>10</y>
          <width>425</width>
          <height>13</height>
         </rect>
        </property>
-         <property name="styleSheet">
-          <string notr="true">#emptyKadsLabel {font-weight: bold; color: #454545;}</string>
-         </property>
-         <property name="text">
-          <string>Select some variables to see K-ad options here</string>
-         </property>
-         <property name="alignment">
-          <set>Qt::AlignCenter</set>
-         </property>
-        </widget>
+       <property name="styleSheet">
+        <string notr="true">#emptyKadsLabel {font-weight: bold; color: #454545;}</string>
+       </property>
+       <property name="text">
+        <string>Select some variables to see K-ad options here</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignCenter</set>
+       </property>
+      </widget>
      </widget>
     </widget>
    </item>
