--- a/NewGeneUI/NewGene/Widgets/CreateOutput/SelectVariables/newgeneselectvariables.ui
+++ b/NewGeneUI/NewGene/Widgets/CreateOutput/SelectVariables/newgeneselectvariables.ui
@@ -59,6 +59,12 @@ stop:0.6 rgba(255, 255, 255, 0));
    </item>
    <item row="0" column="0">
     <widget class="KAdColumnSelectionBox" name="frameKAdSelectionArea">
+     <property name="minimumSize">
+      <size>
+       <width>0</width>
+       <height>40</height>
+      </size>
+     </property>
      <property name="frameShape">
       <enum>QFrame::StyledPanel</enum>
      </property>
