--- a/NewGeneUI/NewGene/Widgets/CreateOutput/SelectVariables/Variables/newgenevariablegroup.ui
+++ b/NewGeneUI/NewGene/Widgets/CreateOutput/SelectVariables/Variables/newgenevariablegroup.ui
@@ -17,12 +17,18 @@
    <property name="spacing">
     <number>0</number>
    </property>
+   <property name="leftMargin">
+    <number>4</number>
+   </property>
    <property name="topMargin">
-    <number>3</number>
+    <number>0</number>
    </property>
    <property name="bottomMargin">
-    <number>3</number>
+    <number>20</number>
    </property>
+   <item>
+    <widget class="QListView" name="listView"/>
+   </item>
    <item>
     <widget class="QWidget" name="selectionButtons" native="true">
      <layout class="QHBoxLayout" name="horizontalLayout">
@@ -33,13 +39,13 @@
        <number>0</number>
       </property>
       <property name="topMargin">
-       <number>2</number>
+       <number>0</number>
       </property>
       <property name="rightMargin">
        <number>0</number>
       </property>
       <property name="bottomMargin">
-       <number>2</number>
+       <number>0</number>
       </property>
       <item>
        <widget class="QToolButton" name="toolButtonSelectAll">
@@ -70,9 +76,6 @@
       </item>
      </layout>
     </widget>
-   </item>
-   <item>
-    <widget class="QListView" name="listView"/>
    </item>
   </layout>
  </widget>
