Migrate handling of "Prepare Run" tab text properly into the threading / signals / slots system.  |  Improve colors of the "Generate Output" pushbutton.  |  Properly enable/disable "Generate Output" button when an output project is opened/closed.

--- a/NewGeneUI/NewGene/Widgets/CreateOutput/GenerateOutput/newgenegenerateoutput.ui
+++ b/NewGeneUI/NewGene/Widgets/CreateOutput/GenerateOutput/newgenegenerateoutput.ui
@@ -114,13 +114,19 @@
 
 QPushButton:pressed {
     background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
-    stop: 0 #dadbde, stop: 1 #56f756);
-    border-color: #ad3434;
+    stop: 0 #dadbde, stop: 1 #349b34);
+    border-color: #2600ff;
 }
 
-QPushButton:hover {
+QPushButton:disabled {
+    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
+    stop: 0 #dadbde, stop: 1 #343434);
+}
+
+QPushButton:hover:!pressed {
     background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
     stop: 0 #dadbde, stop: 1 #56f756);
+    border-color: #ad3434;
 }
 
 QPushButton:flat {
