--- a/NewGeneUI/NewGene/Widgets/ManageInput/UOAs/newgenemanageuoas.ui
+++ b/NewGeneUI/NewGene/Widgets/ManageInput/UOAs/newgenemanageuoas.ui
@@ -72,6 +72,12 @@
            <layout class="QVBoxLayout" name="verticalLayout">
             <item>
              <widget class="QPushButton" name="pushButton_deleteUOA">
+              <property name="minimumSize">
+               <size>
+                <width>100</width>
+                <height>0</height>
+               </size>
+              </property>
               <property name="text">
                <string>Delete UOA</string>
               </property>
@@ -79,6 +85,12 @@
             </item>
             <item>
              <widget class="QPushButton" name="pushButton_createUOA">
+              <property name="minimumSize">
+               <size>
+                <width>100</width>
+                <height>0</height>
+               </size>
+              </property>
               <property name="text">
                <string>New UOA...</string>
               </property>
